--- a/assets/styles/sass/_single.scss
+++ b/assets/styles/sass/_single.scss
@@ -1,6 +1,6 @@
 body#single{
     
-    @media(prefers-color-scheme: dark) and (min-width: 1025px){
+    @media(prefers-color-scheme: dark) and (min-width: 1401px){
     
         & > main{
         min-height: 120vh;
@@ -237,7 +237,7 @@ body#single{
         
     }
     }
-    @media(prefers-color-scheme: dark) and (min-width: 768px) and (max-width: 1024px){
+    @media(prefers-color-scheme: dark) and (min-width: 871px) and (max-width: 1400px){
     
         & > main{
         min-height: 80vh;
@@ -402,26 +402,40 @@ body#single{
             
             & > h3{
                 font-size: 1.8rem;
-                padding-bottom: 3rem;
                 text-decoration: underline $darkThemeRed;
                 text-underline-offset: 0.3rem;
+                margin: 5vh 0;
             }
             
             & > section{
                 display: grid;
-                grid-template-rows: repeat(3, 1fr);
-                grid-rows-gap: 0.5rem;
+                grid-template-columns: repeat(3, 1fr);
+                grid-columns-gap: 0.5rem;
+                
                 
                 & > section{
-                    margin-left: 5rem;
-                    padding-bottom: 2rem;
+                    
+                    &:not(:last-of-type){
+                            @media(prefers-color-scheme: dark){
+                                &{
+                                border-right: solid 2px $darkThemeRed;
+                                }
+                            }
+                    }
+                    
+                    &:not(:first-of-type){
+                        padding-left: 1rem;
+                    }
+                    
                     
                     
                     & > table{
                         
+                       
                         
                         & > thead{
-                            
+                            font-size: 0.5rem;
+                            font-weight: bold;
                             & > tr{
                                 
                                 & > th{
@@ -429,7 +443,7 @@ body#single{
                                     & > h6{
                                         font-size: 1.2rem;
                                         padding-bottom: 2rem;
-                                        text-align: left;
+                                        text-align: start;
                                         text-decoration: underline $darkThemeRed;
                                         text-underline-offset: 0.3rem;
                                     }
@@ -443,26 +457,28 @@ body#single{
                             & > tr{
                                 
                                 
-                                & > td:first-of-type{
+                                & > td{
                                     text-align: start;
                                     padding-bottom: 1.8rem;
                                     padding-right: 3rem;
                                 }
                                 
-                                & > td:last-of-type{
+                                & > th{
                                     text-align: end;
                                     padding-bottom: 1.8rem;
                                 }
                             }
                         }
                     }
+                    
+                    
                 }
             }
         }
         
     }
     }
-    @media(prefers-color-scheme: dark) and (min-width: 320px) and (max-width: 767px){
+    @media(prefers-color-scheme: dark) and (min-width: 320px) and (max-width: 870px){
     
         & > main{
         min-height: 120vh;
@@ -693,7 +709,7 @@ body#single{
     }
     
     
-    @media(prefers-color-scheme: light) and (min-width: 1025px){
+    @media(prefers-color-scheme: light) and (min-width: 1401px){
     
         & > main{
         min-height: 120vh;
@@ -774,7 +790,7 @@ body#single{
                            padding-bottom: 1.3rem;
                            
                            & > span{
-                           color: yellow;
+                           color: $red;
                            }
                            
                            & > span:nth-of-type(5){
@@ -928,17 +944,13 @@ body#single{
         
     }
     }
-    @media(prefers-color-scheme: light) and (min-width: 768px) and (max-width: 1024px){
+    @media(prefers-color-scheme: light) and (min-width: 871px) and (max-width: 1400px){
     
         & > main{
         min-height: 80vh;
         display: grid;
         grid-template-rows: 1fr 1fr;
         padding-top: 3rem;
-         
-        & > section{
-            
-        }
         
         & > section:first-of-type{
             display: grid;
@@ -1154,7 +1166,7 @@ body#single{
         
     }
     }
-    @media(prefers-color-scheme: light) and (min-width: 320px) and (max-width: 767px){
+    @media(prefers-color-scheme: light) and (min-width: 320px) and (max-width: 870px){
     
         & > main{
         min-height: 120vh;
@@ -1162,10 +1174,6 @@ body#single{
         grid-template-rows: 1fr 1fr;
         padding-top: 3rem;
         text-align: justify;
-         
-        & > section{
-            
-        }
         
         & > section:first-of-type{
             display: grid;
